force-app/main/default/objects/Work_Experience__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account1</label>
        <referenceTo>Account1__c</referenceTo>
        <relationshipLabel>Work experiences</relationshipLabel>
        <relationshipName>Work_experiences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business executive</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Marketing executive</fullName>
                </value>
                <value>
                    <fullName>Project manager</fullName>
                </value>
                <value>
                    <fullName>Sales executive</fullName>
                </value>
                <value>
                    <fullName>Salesforce Architect</fullName>
                </value>
                <value>
                    <fullName>Service executive</fullName>
                </value>
                <value>
                    <fullName>Team lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_start_date__c</fullName>
        <label>Project start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <type>Url</type>
    </fields>
    <label>Work Experience</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work experiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>